[gd_scene load_steps=9 format=3 uid="uid://b8mcul0u7l0qc"]

[ext_resource type="Script" path="res://Scripts/mainScript.gd" id="1_icywe"]
[ext_resource type="PackedScene" uid="uid://dyftiy871j8v8" path="res://Scenes/Game/Environment.tscn" id="1_tqhr0"]
[ext_resource type="PackedScene" uid="uid://dcrwh2ap1xt3a" path="res://Scenes/UI/plant_name_edit.tscn" id="2_dewtq"]
[ext_resource type="PackedScene" uid="uid://bw2xtm1lyc5ag" path="res://Scenes/UI/actions.tscn" id="5_nwt38"]
[ext_resource type="PackedScene" uid="uid://dtixe5uub3kjc" path="res://Scenes/UI/info.tscn" id="10_a1s0h"]

[sub_resource type="Animation" id="Animation_va0rj"]
resource_name = "IN"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_rhohl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rkd8e"]
_data = {
"IN": SubResource("Animation_va0rj"),
"RESET": SubResource("Animation_rhohl")
}

[node name="main" type="Node2D" node_paths=PackedStringArray("animationPlayer", "plantNameEdit", "actions", "info", "camera")]
position = Vector2(0, -3)
script = ExtResource("1_icywe")
animationPlayer = NodePath("Camera2D/Info/animationPlayer")
nameEditorScene = ExtResource("2_dewtq")
plantNameEdit = NodePath("Camera2D/PlantNameEdit")
actions = NodePath("Camera2D/actions")
info = NodePath("Camera2D/Info")
camera = NodePath("Camera2D")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(640.71, 366)
limit_smoothed = true
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="actions" parent="Camera2D" node_paths=PackedStringArray("mainClass") instance=ExtResource("5_nwt38")]
visible = false
mainClass = NodePath("../..")

[node name="PlantNameEdit" parent="Camera2D" instance=ExtResource("2_dewtq")]
visible = false

[node name="Info" parent="Camera2D" instance=ExtResource("10_a1s0h")]
visible = false
offset = Vector2(300, 550)
scale = Vector2(0.6, 0.6)
transform = Transform2D(0.6, 0, 0, 0.6, 300, 550)
metadata/_edit_use_anchors_ = true

[node name="animationPlayer" type="AnimationPlayer" parent="Camera2D/Info"]
libraries = {
"": SubResource("AnimationLibrary_rkd8e")
}

[node name="environment1" parent="." instance=ExtResource("1_tqhr0")]
position = Vector2(411, 574)
scale = Vector2(0.425, 0.425)

[node name="Cicles" type="Timer" parent="."]
wait_time = 60.0
autostart = true

[connection signal="create_flowerpot" from="environment1" to="." method="_on_create_flowerpot"]
[connection signal="timeout" from="Cicles" to="." method="_on_timer_timeout"]
